# faast-foundations

./: .gitattributes  .pre-commit-config.yaml  LICENSE.md  README.md
01_clean_code/: README.md
04_git_strategies/: README.md
05_assessing_code_quality/: 1_project_structure.md
06_testing/: README.md  Testing Dataframes.docx  coverage.md  testing_dataframes.md
07_object_oriented_programming/: README.md
07_text_editors/: 1_setup.md  2_productivity.md  3_debugger.md  3_debugging.md  README.md  Setting up VS Code for Python.docx
08_text_editors/: 1_setup.md  2_productivity.md  README.md  Setting up VS Code for Python.docx
assignments/: README.md  pyproject.toml  pyproject.zzzztoml  sandbox.ipynb  teste.py
assignments/assignment_1/: README.md  cleaning.py  leitura_fich.ipynb  new_toml.toml  requirements.txt  teste.ipynb  teste.py  teste1.py  typeteste.py
assignments/assignment_2/: README.md
assignments/assignment_3/: README.md
assignments/assignment_4/: README.md
assignments/assignment_5/: README.md
assignments/life_expectancy/: cleaning.py  cleaning_data.py  defaults.py  load_data.py  main.py  region.py  save_data.py
assignments/life_expectancy/tests/: __init__.py  conftest.py  get_distinct_regions.py  process_data_sample.py  test_cleaning.py  test_load.py  test_main.py  test_region.py  test_saving.py
assignments/life_expectancy/tests/fixtures/: eu_life_expectancy_expected_json_expect.csv  eu_life_expectancy_expected_subset.csv  eu_life_expectancy_raw_subset.tsv  eu_life_expectancy_raw_subset_first.csv  eu_life_expectancy_raw_subset_second.csv
(+8 files in other folders)
